--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>D&D Campaign Manager</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>D&D Campaign Manager</h1>
+    </header>
 
+    <nav>
+        <ul>
+            <li><a href="characters.html">Characters</a></li>
+            <li><a href="npcs.html">NPCs</a></li>
+            <li><a href="quests.html">Quests</a></li>
+            <li><a href="sessions.html">Sessions</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <p>Welcome to your campaign management tool! Choose a section to begin.</p>
+    </main>
+
+    <script src="script.js"></script>
+</body>
+</html>
