--- a/characters.html
+++ b/characters.html
@@ -41,3 +41,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+<header>
+    <h1>Characters</h1>
+    <button id="home-btn" onclick="window.location.href='index.html'">Return Home</button>
+</header>
