--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
         <p>Welcome to your campaign management tool! Choose a section to begin.</p>
     </main>
 
+    <!-- Blade Menu -->
+    <div id="blade-menu">
+        <button id="menu-toggle">☰</button>
+        <div id="menu-content">
+            <a href="characters.html">Characters</a>
+            <a href="npcs.html">NPCs</a>
+            <a href="quests.html">Quests</a>
+            <a href="sessions.html">Sessions</a>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
